--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,10 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>net.rcarz</groupId>
   <artifactId>jira-client</artifactId>
-  <version>0.6-AXWAY-SNAPSHOT</version>
+  <version>0.6-AXWAY-2</version>
   <packaging>jar</packaging>
 
   <name>jira-client</name>
@@ -19,9 +20,11 @@
   </licenses>
 
   <scm>
-    <url>https://github.com/rcarz/jira-client</url>
-    <connection>https://github.com/rcarz/jira-client</connection>
-  </scm>
+    <url>git@github.com:Axway/jira-client.git</url>
+    <connection>scm:git:git@github.com:Axway/jira-client.git</connection>
+  <tag>0.6-AXWAY-2</tag>
+<developerConnection>scm:git:git@github.com:Axway/jira-client.git</developerConnection>
+</scm>
 
   <developers>
     <developer>
